CHANGES for LIRE
================

2013-09-27
==========
  - Added a preliminary implementation of the VLAD descriptor (net.semanticmetadata.lire.imageanalysis.bovw.VLADBuilder)
    It's working, but not all features are available right now. Performance on the Wang data set is slightly better than
    Edge Histogram, and slightly worse than PHOG. On the UCID data set it's quite in the middle.

2013-09-20
==========
  - Added pixel clustering quantization method in package net.semanticmetadata.lire.utils.cv
  - Added fast bilateral filtering based on the code from Frederic Langlet - https://code.google.com/p/kanzi/
  - Added generic double[] k-means in package net.semanticmetadata.lire.utils.cv

2013-09-17
==========
  - Updated to Lucene 4.4.0

2013-09-13
==========
  - Fixed bug in ColorLayout distance metric
  - Fixed bug in JCD re-use
  - Fixed handling of "white only" images in trim(...) function.

2013-08-08
==========
  - Speeded up ParallelIndexer by moving JPEG decoding to the consumer part.

2013-08-08
==========
  - Speeded up OpponentHistogram extraction
  - Speeded up ParallelExtractor by moving JPEG decoding to the consumer part.
  - Speeded up ColorLayoutImpl similarity implementation
  - Small improvements on the JCD similarity implementation

2013-08-07
==========
  - Changed CEDD internal data handling from double to bytes
  - Changed OpponentHistogram internal data handling from double to bytes

2013-08-03
==========
  - Adjusted TestUCID to new, faster searcher implementation.
  - Release 0.9.4 beta_2

2013-08-02
==========
  - Changed quantization & serialization of PHOG (smaller feature, half the size)
  - Changed quantization of JCD for support of RLE with zero values (~56% less space)
  - Fixed some debug code in HashingIndexor.
  - Caught a division by zero in ParallelExtractor

2013-08-01
==========
  - Added fast & dirty search method to BitSamplingImageSearcher.

2013-07-22
==========